<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2008 Google Inc. Licensed under the Apache License,
		Version 2.0 (the "License"); you may not use this file except in
		compliance with the License. You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->

	<!--
		This is a primitive example showing the different types of preferences
		available.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/preferences_sonido">


		<CheckBoxPreference android:key="preference_sonido"
			android:title="@string/preferences_efectos_ingame_titulo"
			android:summary="@string/preferences_efectos_ingame_texto" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_vibracion">

		<CheckBoxPreference android:key="preference_vibracion"
			android:title="@string/preferences_vibracion_titulo" android:summary="@string/preferences_vibracion_texto" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_idioma">


		<ListPreference android:key="preference_idioma"
			android:title="@string/preferences_idioma_titulo" android:summary="@string/preferences_idioma_texto"
			android:entries="@array/entradas_idioma" android:entryValues="@array/valores_idioma"
			android:dialogTitle="@string/preferences_idioma" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_controles">


		<ListPreference android:key="preference_controles"
			android:title="@string/preferences_controles_titulo" android:summary="@string/preferences_controles_texto"
			android:entries="@array/entradas_controles" android:entryValues="@array/valores_controles"
			android:dialogTitle="@string/preferences_idioma" />

	</PreferenceCategory>




</PreferenceScreen>