<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:gravity="center_vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<Button android:id="@+id/jugar" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/jugar">
		<requestFocus />
	</Button>
	<Button android:id="@+id/opciones" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/opciones">
		<requestFocus />
	</Button>

	<Button android:id="@+id/ayuda" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/ayuda">
	</Button>

	<Button android:id="@+id/acercade" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/acercade">
	</Button>

	<Button android:id="@+id/salir" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/salir">
	</Button>


</LinearLayout>
